@@ -69,6 +69,7 @@ int	main(int argc, char **argv) {
 	// instantiation
 	con=new sqlrconnection("localhost",9000,"/tmp/test.socket",
 							"test","test",0,1);
+con->debugOn();
 	cur=new sqlrcursor(con);
 
 	// get database type
