@@ -43,6 +43,7 @@
 		shutdown after a suspended session
 	precision/scale in output bind buffers is initialized now
 	debugstring buffers are no longer build when debug is turned off
+	fixed id vs. index bug when requesting a cursor
 
 0.41 - added configure test for ruby.h
 	added a couple of new functions to the mysql drop-in library
